# rustbcn_leptos

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
src/: app.rs  components.rs  fileserv.rs  home.rs  lib.rs  main.rs  mermaid.rs  prism.rs  server_fns.rs  slides.rs
src/slides/: a_intro.rs  b_leptos.rs  c_ecosystem.rs  d_final.rs  mod.rs
